hotfix: update project messaging count query
(cherry picked from commit 693b407240c6843a4a628db07760567013b21215)